--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+node_modules/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -17,6 +10,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
